@@ -5,8 +5,8 @@ import org.jetbrains.annotations.NotNull;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -27,10 +27,10 @@ public class WGZimmerInsertion extends Insertion {
 
 
     @Override
-    protected @NotNull URL setInsertionURL() throws IllegalStateException {
+    protected @NotNull URI setInsertionURI() throws IllegalStateException {
         try {
-            return new URL(PROTOCOL + DOMAIN + super.getElement().getElementsByTag("a").get(1).attr("href"));
-        } catch (IndexOutOfBoundsException | MalformedURLException e) {
+            return new URI(PROTOCOL + DOMAIN + super.getElement().getElementsByTag("a").get(1).attr("href"));
+        } catch (IndexOutOfBoundsException | URISyntaxException e) {
             throw new IllegalStateException("URI to insertion could not be parsed.\n\n" + e.getMessage());
         }
     }
