@@ -6,8 +6,8 @@ import org.jetbrains.annotations.Nullable;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -40,10 +40,10 @@ public class WOKOInsertion extends Insertion {
     }
 
     @Override
-    protected @NotNull URL setInsertionURL() {
+    protected @NotNull URI setInsertionURI() {
         try {
-            return new URL(PROTOCOL + DOMAIN + super.getElement().getElementsByTag("a").get(0).attr("href"));
-        } catch (IndexOutOfBoundsException | MalformedURLException e) {
+            return new URI(PROTOCOL + DOMAIN + super.getElement().getElementsByTag("a").get(0).attr("href"));
+        } catch (IndexOutOfBoundsException | URISyntaxException e) {
             throw new IllegalStateException("URI to insertion could not be parsed.\n\n" + e.getMessage());
         }
     }
